# simple-profile

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  main.yml
simple_profile/: __init__.py  decorators.py  simple_profile.py  types.py  utils.py
